# tfaa

./: README.md  pyproject.toml  setup.sh
drivers/notebooks/: binance_playground.ipynb  zipper.ipynb
src/python/tfaa/: my.py
src/python/tfaa/data_process/: db_upload_prepare.py
