[tool.poetry]
name = "tfaa"
version = "0.1.0"
description = ""
authors = ["Youngsuk Lee <lee.youngsuk@gmail.com>"]
readme = "README.md"
packages = [{include = "tfaa", from = "src/python"}]


[tool.poetry.dependencies]
python = "^3.9"
nbconvert = "^7.2.9"
jupyter = "^1.0.0"
flake8 = "^6.0.0"
autopep8 = "^2.0.1"
pandas = "^1.5.3"
requests = "^2.28.2"
python-binance = "^1.0.16"
pydantic = "^1.10.7"
pydantic-mongo = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
